Fix spacing in social links page

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -100,6 +100,14 @@ section.education {
     }
 }
 
+#social-links {
+    display: flex;
+}
+
+#social-links a {
+    margin: 4px;
+}
+
 #social-links img {
     @media (prefers-color-scheme: dark) {
         filter: invert(100%);
